@@ -31,7 +31,6 @@ import org.springframework.stereotype.Component;
 
 import java.lang.reflect.InvocationTargetException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 /**
@@ -58,8 +57,10 @@ public class DBDomainToDomainROConverter implements Converter<DBDomain, DomainRO
             BeanUtils.copyProperties(target, source);
             Long memberCount = domainMemberDao.getDomainMemberCount(source.getId(), null, MembershipRoleType.ADMIN);
             target.setAdminMemberCount(memberCount);
+            target.setSmlUrlDomainCodeSuffixEnabled(source.isSmlUrlDomainCodeSuffixEnabled());
+            target.setDomainTrustStoreEnabled(source.isDomainTrustStoreEnabled());
 
-            List<String> domainDocuments = source.getDomainResourceDefs().stream().map(dbDomainResourceDef -> dbDomainResourceDef.getResourceDef().getIdentifier()).collect(Collectors.toList());
+            List<String> domainDocuments = source.getDomainResourceDefs().stream().map(dbDomainResourceDef -> dbDomainResourceDef.getResourceDef().getIdentifier()).toList();
             target.getResourceDefinitions().addAll(domainDocuments);
             target.setDomainId(SessionSecurityUtils.encryptedEntityId(source.getId()));
         } catch (IllegalAccessException | InvocationTargetException e) {
